@@ -43,6 +43,13 @@ orientation_poll_interval = 1000
 # Increase to make more stable, decrease to add sensitivity
 orientation_discard_time = 750000
 
+
+# Calibration handler parameters
+calibration_background_rate =  1000
+calibration_rate = 100
+calibration_stopped_rate = 1000
+calibration_timeout = 900000
+
 ### Plugins
 ###
 ### Provide the actual plugin name (libsensor.so --> sensor) for the
