@@ -4,6 +4,7 @@ sensord (0.6.32) unstable; urgency=low
   * Fixes: NB#199971 - proximity sensor never returns True
   * Added new tap feature, tap sensor offers single, double and single/double tap data.
   * Added test case for stationary
+  * Changed calibrationHandler to get parameter value from config.
 
   [Timo Rongas]
   * Fixes: NB#206204 - sensord prints debugs to console on startup
